unpackaged/main/default/objects/Case/fields/Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site</label>
    <referenceTo>ETSALES_Account_Sites__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>