unpackaged/main/default/objects/Case/fields/Arkani_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Arkani_Integration_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arkani Integration Status</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>