unpackaged/main/default/objects/Case/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Resource</label>
    <referenceTo>SALine_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>