unpackaged/main/default/objects/Case/fields/Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Vehicle</label>
    <referenceTo>SALine_Assigned_Vehicle__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>