unpackaged/main/default/objects/Case/fields/Assigned_Vehicle_Text__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Vehicle Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>