unpackaged/main/default/objects/Case/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Bus supervisors</fullName>
            </value>
            <value>
                <fullName>Bus drivers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>