unpackaged/main/default/objects/Case/fields/Audience_AR__c.field-meta.xml
<CustomField>
    <fullName>Audience_AR__c</fullName>
    <label>Audience AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>أولياء الأمور</fullName>
            </value>
            <value>
                <fullName>الطلبة</fullName>
            </value>
            <value>
                <fullName>مشرفي الحافلات</fullName>
            </value>
            <value>
                <fullName>سائقي الحالفلات</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>