unpackaged/main/default/objects/Case/fields/Buffing_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Start time</label>
    <type>DateTime</type>
</CustomField>