unpackaged/main/default/objects/Case/fields/Buffing_Technician__c.field-meta.xml
<CustomField>
    <fullName>Buffing_Technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buffing Technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>