unpackaged/main/default/objects/Case/fields/Building_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Building_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Start Time</label>
    <type>DateTime</type>
</CustomField>