unpackaged/main/default/objects/Case/fields/Building_technician__c.field-meta.xml
<CustomField>
    <fullName>Building_technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>