unpackaged/main/default/objects/Case/fields/Building_Technician_Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Building_Technician_Rejection_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Technician Rejection Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>