unpackaged/main/default/objects/Case/fields/Building_Technician_Rejection_RemarksBui__c.field-meta.xml
<CustomField>
    <fullName>Building_Technician_Rejection_RemarksBui__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Technician Rejection RemarksBui</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>