unpackaged/main/default/objects/Case/fields/Business_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Request_Type__c</fullName>
    <label>Business Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminate</fullName>
            </value>
            <value>
                <fullName>Off-Hire</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>