unpackaged/main/default/objects/Case/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Record_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>School Transport</fullName>
            </value>
            <value>
                <fullName>Transport and Leasing</fullName>
            </value>
            <value>
                <fullName>ETDI</fullName>
            </value>
            <value>
                <fullName>Limousine Services</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection Services</fullName>
            </value>
            <value>
                <fullName>Transport Services - B2B</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Traffic Fine</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2C</fullName>
            </value>
            <value>
                <fullName>Auto Repair Services - B2B</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>Logistic</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>