unpackaged/main/default/objects/Case/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Re-print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>