unpackaged/main/default/objects/Case/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Comment?</label>
    <type>Checkbox</type>
</CustomField>