unpackaged/main/default/objects/Case/fields/Case_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Types__c</fullName>
    <label>Case Record Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Complaints</fullName>
            </value>
            <value>
                <fullName>Accident/Emergency</fullName>
            </value>
            <value>
                <fullName>Add Service</fullName>
            </value>
            <value>
                <fullName>Cancel Services</fullName>
            </value>
            <value>
                <fullName>Feedback and Appreciation</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Inquiry and Notices</fullName>
            </value>
            <value>
                <fullName>Internal Issues</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Online Services</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Safety Issues</fullName>
            </value>
            <value>
                <fullName>Service Compliance</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Staff Behavior</fullName>
            </value>
            <value>
                <fullName>Service Environment</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Traffic Violation</fullName>
            </value>
            <value>
                <fullName>Update Information</fullName>
            </value>
            <value>
                <fullName>ET Tyre - Claim</fullName>
            </value>
            <value>
                <fullName>ET Tyre - Traffic Fine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>