unpackaged/main/default/objects/Case/fields/Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Types__c</fullName>
    <label>Case Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancel Service</fullName>
            </value>
            <value>
                <fullName>Complaint and Follow up</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Get Services</fullName>
            </value>
            <value>
                <fullName>Inquires and Notices</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>Thankyou and appreciation</fullName>
            </value>
            <value>
                <fullName>Update Information</fullName>
            </value>
            <value>
                <fullName>Human Resource</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Online and Financial Services</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Quality and Compliance</fullName>
            </value>
            <value>
                <fullName>Traffic Violation</fullName>
            </value>
            <value>
                <fullName>Internal Issues</fullName>
            </value>
            <value>
                <fullName>Theft and Missing</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Accident/Emergency</fullName>
            </value>
            <value>
                <fullName>Request for Awareness Session</fullName>
            </value>
            <value>
                <fullName>Request for New Bus/Supervisors/Teachers Transfer</fullName>
            </value>
            <value>
                <fullName>Requests for New Trips Activities and Events</fullName>
            </value>
            <value>
                <fullName>Printing New Card - Student</fullName>
            </value>
            <value>
                <fullName>Printing New Card - Drivers &amp; Transportation Supervisors</fullName>
            </value>
            <value>
                <fullName>Evaluation of Schools/Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Bus is not on time</fullName>
            </value>
            <value>
                <fullName>Change the Bus stop as my kid is too young to reach the stop</fullName>
            </value>
            <value>
                <fullName>Bus didn&#39;t pick my kid</fullName>
            </value>
            <value>
                <fullName>My kid was bullied</fullName>
            </value>
            <value>
                <fullName>Driver behavior is bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>