unpackaged/main/default/objects/Case/fields/Casuality__c.field-meta.xml
<CustomField>
    <fullName>Casuality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casuality</label>
    <type>Checkbox</type>
</CustomField>