unpackaged/main/default/objects/Case/fields/Category_Affected_By_The_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Category_Affected_By_The_Complaint__c</fullName>
    <label>Category Affected By The Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Delivery Operation</fullName>
            </value>
            <value>
                <fullName>Student Card</fullName>
            </value>
            <value>
                <fullName>School Transport Drivers</fullName>
            </value>
            <value>
                <fullName>Bus Supervisors</fullName>
            </value>
            <value>
                <fullName>Traffic Supervisor</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>