unpackaged/main/default/objects/Case/fields/Causes_of_the_problem__c.field-meta.xml
<CustomField>
    <fullName>Causes_of_the_problem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Causes of the problem</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>