unpackaged/main/default/objects/Case/fields/CCM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CCM_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCM Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>