unpackaged/main/default/objects/Case/fields/Cementing_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Cementing_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cementing End Time</label>
    <type>DateTime</type>
</CustomField>