unpackaged/main/default/objects/Case/fields/Cementing_Technician__c.field-meta.xml
<CustomField>
    <fullName>Cementing_Technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cementing Technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>