unpackaged/main/default/objects/Case/fields/Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>Collection_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>