unpackaged/main/default/objects/Case/fields/CollectionRemarks__c.field-meta.xml
<CustomField>
    <fullName>CollectionRemarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>