unpackaged/main/default/objects/Case/fields/Collector_Log__c.field-meta.xml
<CustomField>
    <fullName>Collector_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector Log</label>
    <referenceTo>Collector_Logs__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>