unpackaged/main/default/objects/Case/fields/Coordinator_Number__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Number__c</fullName>
    <label>Coordinator Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>