unpackaged/main/default/objects/Case/fields/Correction_Action__c.field-meta.xml
<CustomField>
    <fullName>Correction_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corrective Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>