unpackaged/main/default/objects/Case/fields/Create_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Create_Knowledge_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Knowledge Article</label>
    <type>Checkbox</type>
</CustomField>