unpackaged/main/default/objects/Case/fields/Curing_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Curing_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing End Time</label>
    <type>DateTime</type>
</CustomField>