unpackaged/main/default/objects/Case/fields/Curing_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Curing_Start_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing Start Time</label>
    <type>DateTime</type>
</CustomField>