unpackaged/main/default/objects/Case/fields/Curing_technician__c.field-meta.xml
<CustomField>
    <fullName>Curing_technician__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curing technician</label>
    <length>250</length>
    <type>Text</type>
</CustomField>