unpackaged/main/default/objects/Case/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>