unpackaged/main/default/objects/Case/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>