unpackaged/main/default/objects/Case/fields/Delegated_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Person_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Person Name</label>
    <referenceTo>SALine_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Cases (Delegated Person Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>