unpackaged/main/default/objects/Case/fields/Detail_business_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Detail_business_Enquiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail business Enquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>