unpackaged/main/default/objects/Case/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Device Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>