unpackaged/main/default/objects/Case/fields/Disability_Type__c.field-meta.xml
<CustomField>
    <fullName>Disability_Type__c</fullName>
    <label>Disability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheelchair (normal)</fullName>
            </value>
            <value>
                <fullName>Wheelchair (automatic)</fullName>
            </value>
            <value>
                <fullName>Crutches</fullName>
            </value>
            <value>
                <fullName>Walker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Autism</fullName>
                <isActive>false</isActive>
                <label>Autism</label>
            </value>
            <value>
                <fullName>Hyperactivity</fullName>
                <isActive>false</isActive>
                <label>Hyperactivity</label>
            </value>
            <value>
                <fullName>Impaired mobility</fullName>
                <isActive>false</isActive>
                <label>Impaired mobility</label>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
                <isActive>false</isActive>
                <label>Osteoporosis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>