unpackaged/main/default/objects/Case/fields/DisputeReason__c.field-meta.xml
<CustomField>
    <fullName>DisputeReason__c</fullName>
    <label>Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addendum Not Signed (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Addendum Not Signed (School Transport)</fullName>
            </value>
            <value>
                <fullName>Addendum Not Signed (MRO)</fullName>
            </value>
            <value>
                <fullName>Contract Not Signed (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Contract Not Signed (School Transport)</fullName>
            </value>
            <value>
                <fullName>Contract Not Signed (MRO)</fullName>
            </value>
            <value>
                <fullName>Delay in Vehicle Delivery (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Delay in Vehicle Delivery (School Transport)</fullName>
            </value>
            <value>
                <fullName>Delay in Vehicle Delivery (MRO)</fullName>
            </value>
            <value>
                <fullName>Fuel Increase Dispute (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Fuel Increase Dispute (School Transport)</fullName>
            </value>
            <value>
                <fullName>Fuel Increase Dispute (MRO)</fullName>
            </value>
            <value>
                <fullName>Government New Rule (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Government New Rule (School Transport)</fullName>
            </value>
            <value>
                <fullName>Government New Rule (MRO)</fullName>
            </value>
            <value>
                <fullName>New Routes Request (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>New Routes Request (School Transport)</fullName>
            </value>
            <value>
                <fullName>New Routes Request (MRO)</fullName>
            </value>
            <value>
                <fullName>New Service Request (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>New Service Request (School Transport)</fullName>
            </value>
            <value>
                <fullName>New Service Request (MRO)</fullName>
            </value>
            <value>
                <fullName>No Purchase Order (P.O.) (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>No Purchase Order (P.O.) (School Transport)</fullName>
            </value>
            <value>
                <fullName>No Purchase Order (P.O.) (MRO)</fullName>
            </value>
            <value>
                <fullName>Purchase Order (P.O.) Fully Utilized (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Purchase Order (P.O.) Fully Utilized (School Transport)</fullName>
            </value>
            <value>
                <fullName>Purchase Order (P.O.) Fully Utilized (MRO)</fullName>
            </value>
            <value>
                <fullName>Service Issue (T&amp;L)</fullName>
            </value>
            <value>
                <fullName>Service Issue (School Transport)</fullName>
            </value>
            <value>
                <fullName>Service Issue (MRO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>