unpackaged/main/default/objects/Case/fields/Driver_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver Number</label>
    <type>Phone</type>
</CustomField>