unpackaged/main/default/objects/Case/fields/Employee_Family__c.field-meta.xml
<CustomField>
    <fullName>Employee_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Family</label>
    <referenceTo>ETIN_Employee_Family__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>