unpackaged/main/default/objects/Case/fields/Entered_On__c.field-meta.xml
<CustomField>
    <fullName>Entered_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entered On</label>
    <type>DateTime</type>
</CustomField>