unpackaged/main/default/objects/Case/fields/ET_B2B_Complaint_Against__c.field-meta.xml
<CustomField>
    <fullName>ET_B2B_Complaint_Against__c</fullName>
    <description>used to register complaint from b2b portal</description>
    <label>New Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned Resource</fullName>
            </value>
            <value>
                <fullName>Assigned Vehicle</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>