unpackaged/main/default/objects/Case/fields/ET_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Contact_Number__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ET Contact Number</label>
    <type>Text</type>
</CustomField>