unpackaged/main/default/objects/Case/fields/ET_Driver__c.field-meta.xml
<CustomField>
    <fullName>ET_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ET Driver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SALine_Assigned_Resource__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SALine_Assigned_Resource__c</referenceTo>
    <relationshipLabel>Cases (ET Driver)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>