unpackaged/main/default/objects/Case/fields/ET_Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>ET_Issue_Category__c</fullName>
    <label>ET Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Compliance</fullName>
            </value>
            <value>
                <fullName>Driver/Staff Behavior</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Online Services</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Traffic Violation</fullName>
            </value>
            <value>
                <fullName>Internal issues</fullName>
            </value>
            <value>
                <fullName>Service Delivery Operations</fullName>
            </value>
            <value>
                <fullName>Student Card</fullName>
            </value>
            <value>
                <fullName>school transport drivers</fullName>
            </value>
            <value>
                <fullName>Traffic Supervisor</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Bus Supervisor</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>Get service</fullName>
            </value>
            <value>
                <fullName>Inquiries</fullName>
            </value>
            <value>
                <fullName>Cancel service</fullName>
            </value>
            <value>
                <fullName>Update information</fullName>
            </value>
            <value>
                <fullName>Driver Behaviour</fullName>
            </value>
            <value>
                <fullName>Accident/Emergency</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Thank you and appreciation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>